<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_plant_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textview_plant_name_ch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageview_plant_picture" />

            <TextView
                android:id="@+id/textview_plant_name_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_name_ch" />

            <TextView
                android:id="@+id/textview_plant_also_known_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_also_known_text"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_name_en" />

            <TextView
                android:id="@+id/textview_plant_also_known"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_also_known_title" />

            <TextView
                android:id="@+id/textview_plant_brief_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_brief_text"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_also_known" />

            <TextView
                android:id="@+id/textview_plant_brief"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_brief_title" />

            <TextView
                android:id="@+id/textview_plant_feature_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_feature_text"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_brief" />

            <TextView
                android:id="@+id/textview_plant_feature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_feature_title" />

            <TextView
                android:id="@+id/textview_plant_function_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_function_text"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_feature" />

            <TextView
                android:id="@+id/textview_plant_function"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_function_title" />

            <TextView
                android:id="@+id/textview_plant_last_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_last_update_text"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_function" />

            <TextView
                android:id="@+id/textview_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                style="@style/style_text_regular_size_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_plant_last_update_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>